hphp/hack/test/typecheck/inout/bad_inout_decl_memoize3.php.exp
File "bad_inout_decl_memoize3.php", line 5, characters 40-52:
<<__Memoize>> cannot be used on functions with inout parameters (Parsing[1002])
File "bad_inout_decl_memoize3.php", line 5, characters 26-28:
Functions with inout parameters cannot be memoized (NastCheck[3045])
File "bad_inout_decl_memoize3.php", line 5, characters 52-53:
This is an inout parameter
